--- a/src/style.css
+++ b/src/style.css
@@ -62,12 +62,12 @@ h2 {
   border: rgb(51, 40, 40) solid 0.2rem;
 }
 
-.list-score {
+.list {
   padding: 4px;
 }
 
-.list-score:nth-child(odd) {
-  background-color: rgb(211, 202, 202);
+.list:nth-child(odd) {
+  background-color: rgb(150, 144, 144);
 }
 
 form {
