Add styling to the application

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,10 @@
 
 html {
   font-family: 'Montserrat', sans-serif;
+  background-image: url(https://get.wallhere.com/photo/Assassins-Creed-Revelations-Desmond-Miles-castle-wall-snow-mountains-731748.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 300vh;
 }
 
 ul {
@@ -19,9 +23,9 @@ h2 {
 }
 
 .title {
-  font-size: 3em;
+  font-size: 5em;
   padding-top: 2em;
-  padding-left: 6em;
+  padding-left: 3em;
   color: gold;
 }
 
@@ -46,6 +50,10 @@ h2 {
   gap: 2em;
 }
 
+.score-title {
+  color: bisque;
+}
+
 .score {
   display: flex;
   align-items: center;
@@ -62,6 +70,7 @@ h2 {
 .list {
   border: rgb(51, 40, 40) solid 0.2rem;
   padding: 4px;
+  color: azure;
 }
 
 form {
