--- a/src/style.css
+++ b/src/style.css
@@ -23,9 +23,9 @@ h2 {
 }
 
 .title {
-  font-size: 5em;
+  font-size: 3em;
   padding-top: 2em;
-  padding-left: 3em;
+  padding-left: 5em;
   color: gold;
 }
 
@@ -33,13 +33,12 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5em;
+  padding: 5px;
   height: 100%;
 }
 
 .main-container {
   display: flex;
-  padding: 8em;
   gap: 8em;
 }
 
